--- a/src/light-style.css
+++ b/src/light-style.css
@@ -3,18 +3,17 @@
   padding: 0;
   box-sizing: border-box;
 }
-body {
-  /* min-height: 50vh; */
 
-  /* background: url(/asset/laptopmobiletablet.jpeg);
-  opacity: 0.4;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center; */
-  background: #0c192c;
+body {
+
   overflow-x: hidden;
+  
 }
 
+header {
+  background: #0c192c;
+  height: 99vh;
+}
 h2 {
   vertical-align: center;
   text-align: center;
@@ -159,16 +158,30 @@ li a {
   position: relative;
   height: 30px;
   width: 30px;
-  background: #01494a;
+ 
   margin: 0 4px;
   border-radius: 50%;
-  box-shadow: 0 0 0 10px #4fc3dc44, 0 0 50px #01494a, 0 0 100px #01494a;
+  
   animation: animate 2s linear infinite;
   animation-duration: calc(80s / var(--i));
 }
 .bubble span:nth-child(even) {
-  background: #71062c;
-  box-shadow: 0 0 0 10px #ff2d7544, 0 0 50px #71062c, 0 0 100px #71062c;
+  width: 15px;
+  height: 10px;
+  font-size: 2.5rem;
+  color: #26246d;
+  /* background: #71062c; */
+  /* box-shadow: 0 0 0 10px #ff2d7544, 0 0 50px #71062c, 0 0 100px #71062c; */
+}
+.bubble span:nth-child(odd) {
+  width: 15px;
+  height: 15px;
+  font-size: 3rem;
+  color: #fff;
+  /* background-color: #fff ; */
+ /* background: #01494a; */
+ /* box-shadow: 0 0 0 10px #4fc3dc44, 0 0 50px #01494a, 0 0 100px #01494a; */
+  /* box-shadow: 0 0 0 10px #ff2d7544, 0 0 50px #71062c, 0 0 100px #71062c; */
 }
 @keyframes animate {
   0% {
@@ -180,15 +193,16 @@ li a {
 }
 
 .container5 {
-  /* position: relative; */
+  position: relative;
   display: flex;
-
+  z-index: 2;
   justify-content: space-between;
   align-items: center;
   width: 100%;
   height: 90vh;
   overflow: hidden;
   width: 100%;
+  margin-top: -80px;
 }
 .pic-main-face {
   background: url(/asset/laptop-tablet-desktop-mobile.png);
@@ -199,33 +213,18 @@ li a {
   height: 25rem;
   margin-left: 30%;
   opacity: 0.3;
-  /* margin-top: 20%;
-  margin-left: 20%; */
   z-index: -1;
 }
-.g-container {
-  position: relative;
-  margin-left: 20%;
-  top: 0%;
-  font-family: monospace;
-  color: rgb(255, 255, 255);
-  font-size: 4em;
-  filter: contrast(15);
-  z-index: 1;
-  width: 20%;
-  height: 30%;
-  display: flex;
-  flex-direction: column;
-}
+
 
 .item-1,
 .item-2,
 .item-3 {
-  position: absolute;
+  position: relative;
   display: block;
-  top: 5em;
+  top: 2em;
   width: 60%;
-  font-size: 2em;
+  font-size: 4em;
   color: #fff;
   animation-duration: 20s;
   animation-timing-function: ease-in-out;
@@ -296,47 +295,7 @@ li a {
     opacity: 0;
   }
 }
-/* .word {
-  position: absolute;
-  transform: translate(-50%, -50%);
-  animation: switch 5s infinite ease-in-out;
-  animation-iteration-count: 3;
-  min-width: 100%;
-  margin: auto;
-}
 
-.word:nth-child(1) {
-  animation-delay: -7s;
-  margin-top: 5%;
-}
-
-.word:nth-child(2) {
-  animation-delay: -6s;
-  margin-top: 9%;
-}
-
-.word:nth-child(3) {
-  animation-delay: -5s;
-  margin-top: 13%;
-}
-
-@keyframes switch {
-  0%,
-  5%,
-  100% {
-    filter: blur(0px);
-    opacity: 1;
-  }
-
-  50%,
-  80% {
-    filter: blur(180px);
-    opacity: 0;
-  }
-  100% {
-    opacity: 0;
-  }
-} */
 
 .social-media {
   color: #fff;
@@ -354,15 +313,7 @@ li a {
 
 /* wave section */
 
-.css-waves {
-  position: relative;
-  width: 100%;
-  height: 15vh;
-  margin-top: -55px;
-  margin-bottom: -7px;
-  min-height: 100px;
-  max-height: 150px;
-}
+
 
 /* Here we declare the SVG node that we wish to animate. */
 
@@ -407,158 +358,146 @@ li a {
  
 }
 
-/* *,
-*::after,
-*::before {
-  box-sizing: border-box;
-}
-body {
-  background: #001933;
-}
-.container {
-  width: 75px;
-  height: 275px;
-  animation: bulb-swing 3s infinite ease-in-out;
-  transform-origin: top center;
-  position: absolute;
-  top: 0;
-  left: calc(50% - (75px / 2));
-}
-.container.pused {
-  animation-play-state: paused;
-}
-.bulb {
-  z-index: 10;
-  display: block;
-  width: 75px;
-  height: 75px;
-  border-radius: 50%;
-  position: absolute;
-  top: 200px;
-  left: calc(50% - (75px / 2));
-  background: #ffd700;
-  box-shadow: 5px 5px 80px gold, 5px -5px 80px gold, -5px 5px 80px gold,
-    -5px -5px 80px gold;
-  cursor: pointer;
-}
-.bulb::before {
-  content: "";
-  position: absolute;
-  width: 35px;
-  height: 50px;
-  background: black;
-  bottom: 100%;
-  left: calc(50% - (35px / 2));
-  z-index: -1;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-}
 
-.bulb::after {
-  content: "";
-  position: absolute;
-  width: 10px;
-  height: 250px;
-  background: black;
-  bottom: 100%;
-  left: calc(50% - 5px);
-  z-index: 1;
-}
-.bulb .filamnet {
-  display: block;
-  position: absolute;
-  width: 2px;
-  height: 30px;
-  background: black;
-  top: 2px;
-  left: 28px;
-  box-shadow: 17px 0 black;
-  opacity: 0;
-}
 
-.bulb .filamnet::after {
-  content: "";
-  position: absolute;
-  bottom: -2px;
-  background: black;
-  width: 2px;
-  height: 12px;
-  display: block;
-  box-shadow: 4.5px 0 black, 9px 0 black;
-}
-.bulb.off {
-  background: transparent;
-  box-shadow: none;
-  border: 1px solid black;
-}
-.filamnet.off {
-  opacity: 1;
-}
-@keyframes bulb-swing {
-  0% {
-    transform: rotate(-10deg);
+@media (max-width: 900px) {
+  .Curriculum-vitae {
+    display: flex;
+    flex-direction: column;
+    height: 150vh;
   }
-  50% {
-    transform: rotate(10deg);
+  .text-header {
+    font-size: 2.5rem;
   }
-  100% {
-    transform: rotate(-10deg);
+  .header-text-button {
+    left: -30%;
+    top: 35px;
+  }
+  .items1,
+  .items2,
+  .items3,
+  .items4,
+  .items5,
+  .items6 {
+    height: 100vh;
+  }
+  .media-link {
+    display: flex;
+    flex-direction: column;
+  }
+  .social-tittle {
+    text-align: center;
+  }
+  footer {
+    top: 100px;
+    font-size: 3rem;
+  }
+
+  .main-container {
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+  }
+  .container2 h1 {
+    font-size: 1rem;
+  }
+  .text {
+    width: 100%;
+    display: block;
+  }
+  .iframebox1,
+  .iframebox2,
+  .iframebox3,
+  .iframebox4,
+  .iframebox5,
+  .iframebox6 {
+    width: 49%;
+    height: 70%;
+  }
+  .container5 {
+    width: 50%;
+    height: 90vh;
+   
+  }
+  .item-1, .item-2, .item-3 {
+   font-size: 2rem;
   }
 }
 
-.floor {
-  position: absolute;
-  background: black;
-  height: 75vh;
+.container5 {
+  position: relative;
+  display: flex;
+  z-index: 2;
+  justify-content: space-between;
+  align-items: center;
   width: 100%;
-  top: 350px;
-  bottom: 0;
-  left: 0;
+  height: 90vh;
+  overflow: hidden;
+ 
+  margin-top: -80px;
 }
-.floor .shadow {
-  position: absolute;
-  background: #524c11;
-  width: 300px;
-  height: 300px;
-  border-radius: 50%;
-  top: calc(30% - 25px);
-  left: calc(40% - 25px);
-  box-shadow: 20px 20px 150px gold, -20px 20px 150px gold, 20px -20px 105px gold,
-    -20px -20px 150px gold;
-  animation: shadow-swing 3s infinite ease-in-out;
-}
-.shadow.off {
-  background: #000c19;
-  box-shadow: none;
-}
-p {
-  position: absolute;
-  left: 22%;
-  font-size: 1.5rem;
+.pic-main-face {
+  background: url(/asset/laptop-tablet-desktop-mobile.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  width: 25rem;
+  height: 25rem;
+  margin-left: 30%;
+  opacity: 0.3;
+  z-index: -1;
 }
 
-@keyframes shadow-swing {
-  0% {
-    transform: translateX(100px);
-  }
-  50% {
-    transform: translateX(-100px);
-  }
-  100% {
-    transform: translateX(100px);
-  }
-}
 
-.backtomain {
-  position: relative;
-  top: 270px;
-  left: 100px;
+
+
+
+/* middle pae  started */
+.middle-page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  height: 40vh;
+  text-align: center;
+  background-color: #b0568d;
 }
-.backtomain a {
+.tittle-middle-page {
+  color: #fff;
+  font-size: 2rem;
+}
+.button-middle-page {
+  background-color: #755990;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
   text-decoration: none;
-  position: relative;
-  left: -20px;
-  height: 15px;
-  color: #000;
-  border: 1px solid black;
-} */
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 15px;
+}
+.button-middle-page a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+.social-media {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 95px;
+}
+.media-link {
+  bottom: 10px;
+}
+
+.media-link i {
+  padding: 15px;
+  margin-top: 30px !important;
+}
+/* middle page ended */
