--- a/style.css
+++ b/style.css
@@ -148,6 +148,99 @@ li a {
 
 /* navbar mediaquery ended  */
 
+.g-container {
+  position: relative;
+  margin-left: 20%;
+  margin-top: 50%;
+  font-family: monospace;
+  color: rgb(255, 255, 255);
+  font-size: 4em;
+  filter: contrast(15);
+  z-index: 2;
+  width: 20%;
+  height: 30%;
+  display: flex;
+  flex-direction: column;
+}
+
+.item-1,
+.item-2,
+.item-3 {
+  position: absolute;
+  display: block;
+  top: 5em;
+  width: 60%;
+  font-size: 2em;
+  color: #fff;
+  animation-duration: 20s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+}
+
+.item-1 {
+  animation-name: anim-1;
+}
+
+.item-2 {
+  animation-name: anim-2;
+}
+
+.item-3 {
+  animation-name: anim-3;
+}
+
+@keyframes anim-1 {
+  0%,
+  8.3% {
+    left: -100%;
+    opacity: 0;
+  }
+  8.3%,
+  25% {
+    left: 25%;
+    opacity: 1;
+  }
+  33.33%,
+  100% {
+    left: 110%;
+    opacity: 0;
+  }
+}
+
+@keyframes anim-2 {
+  0%,
+  33.33% {
+    left: -100%;
+    opacity: 0;
+  }
+  41.63%,
+  58.29% {
+    left: 25%;
+    opacity: 1;
+  }
+  66.66%,
+  100% {
+    left: 110%;
+    opacity: 0;
+  }
+}
+
+@keyframes anim-3 {
+  0%,
+  66.66% {
+    left: -100%;
+    opacity: 0;
+  }
+  74.96%,
+  91.62% {
+    left: 25%;
+    opacity: 1;
+  }
+  100% {
+    left: 110%;
+    opacity: 0;
+  }
+}
 /* header and header's pic and and header's text started */
 
 .header-pic {
@@ -363,28 +456,51 @@ li a {
     font-size: 3rem;
   }
 
-.main-container {
-  justify-content: space-evenly;
-  flex-wrap: wrap;
-
-
+  .main-container {
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+  }
+  .container2 h1 {
+    font-size: 1rem;
+  }
+  .text {
+    width: 100%;
+    display: block;
+  }
+  .iframebox1,
+  .iframebox2,
+  .iframebox3,
+  .iframebox4,
+  .iframebox5,
+  .iframebox6 {
+    width: 49%;
+    height: 70%;
+  }
 }
-.container2 h1 {
-  font-size: 1rem;
-}
-.text {
+
+.container5 {
+  /* position: relative; */
+  display: flex;
+
+  justify-content: space-between;
+  align-items: center;
   width: 100%;
-  display: block;
+  height: 90vh;
+  overflow: hidden;
+  width: 100%;
 }
-.iframebox1,
-.iframebox2,
-.iframebox3,
-.iframebox4,
-.iframebox5,
-.iframebox6 {
-  width: 49%;
-  height: 70%;
-}
+.pic-main-face {
+  background: url(/asset/laptop-tablet-desktop-mobile.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  width: 25rem;
+  height: 25rem;
+  margin-left: 30%;
+  opacity: 0.3;
+  /* margin-top: 20%;
+  margin-left: 20%; */
+  z-index: -1;
 }
 /* media query section ended*/
 
@@ -428,7 +544,7 @@ iframe {
 .text {
   cursor: default;
   display: inline-block;
-   border: 2px solid #ddd;
+  border: 2px solid #ddd;
   padding: 5px;
   border-radius: 3px;
   font-size: 12px;
@@ -454,7 +570,6 @@ iframe {
   text-align: center;
   height: 50%;
   width: 25%;
-
 }
 .container2 span a {
   text-decoration: none;
